Fix weird wrapping thing on iPhone

--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,7 @@ nav a:hover {
 }
 
 .features > .twitter p {
-    margin-top: -0.25em;
+    margin-top: 0em;
 }
 
 .twitter a {
